--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	  <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-		<title>orla.io</title>
+		<title>SoGive</title>
 		<link rel="shortcut icon" href="/favicon.png" />
 
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
