--- a/web/index.html
+++ b/web/index.html
@@ -8,8 +8,8 @@
 		<title>SoGive</title>
 		<link rel="shortcut icon" href="/favicon.png" />
 
-		<!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />-->
-		<link href="/lib/bootstrap.min.css" rel="stylesheet" />
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+		<!--<link href="/lib/bootstrap.min.css" rel="stylesheet" />-->
 
 		<link rel="stylesheet/less" type="text/css" href="/style/main.less?_=TIMESTAMP">
 		<link rel="stylesheet/less" type="text/css" href="/style/print.less?_=TIMESTAMP" media="print">
@@ -19,14 +19,15 @@
 		<div id="mainDiv"></div>
 
 		<!-- Scripts -->
-		<!--
 			<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script>-->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script>
+		<!--
 		<script src="/lib/jquery.min.js"></script>
 		<script src="/lib/bootstrap.min.js"></script>
 		<script src="/lib/less-1.4.2.min.js"></script>
-
+		-->
+		
 		<!-- everything else comes via webpack -->
 		<script src="/build/js/bundle.js"></script>
 
