--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	  <meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
 
 		<title>SoGive</title>
 		<link rel="shortcut icon" href="/favicon.png" />
@@ -13,39 +13,47 @@
 
 		<link rel="stylesheet/less" type="text/css" href="/style/main.less?_=TIMESTAMP">
 		<link rel="stylesheet/less" type="text/css" href="/style/print.less?_=TIMESTAMP" media="print">
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+			ga('create', 'UA-15749759-8', 'auto');
+			ga('send', 'pageview');
+		</script>
 	</head>
 	<body>
 		<div id="mainDiv"></div>
 
 		<!-- Scripts -->
-			<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script>
-
 		<script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
+		<script>
+			window.fbAsyncInit = function() {
+			    FB.init({
+			      appId      : '1847521215521290',
+			      xfbml      : true,
+			      version    : 'v2.8'
+			    });
+		    //FB.AppEvents.logPageView();
+			};
 
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '1847521215521290',
-      xfbml      : true,
-      version    : 'v2.8'
-    });
-    //FB.AppEvents.logPageView();
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
+			(function(d, s, id){
+	    		var js, fjs = d.getElementsByTagName(s)[0];
+				if (d.getElementById(id)) {return;}
+				js = d.createElement(s); js.id = id;
+				js.src = "//connect.facebook.net/en_US/sdk.js";
+				fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk'));
+		</script>
 
 		<!-- everything else comes via webpack -->
 		<script src="/build/js/bundle.js"></script>
 
 	</body>
+	<footer>
+	</footer>
 </html>
