--- a/web/index.html
+++ b/web/index.html
@@ -54,6 +54,42 @@
 		<script src="/build/js/bundle.js"></script>
 
 	</body>
-	<footer>
+	<footer class="footer">
+		<div class="container">
+			<center>
+				<p class="text-muted">
+					&copy; 2017 SoGive <a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
+					<br>
+                	Site design &amp; hosting: <a href='http://winterwell.com'>Winterwell</a>
+                	<br>
+                	<!-- <a href='privacy-policy.html'>Privacy policy</a> -->
+				</p>
+			</center>
 	</footer>
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<script>
+		/*!
+ 		* IE10 viewport hack for Surface/desktop Windows 8 bug
+		* Copyright 2014-2015 Twitter, Inc.
+		* Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+		*/
+
+		// See the Getting Started docs for more information:
+		// http://getbootstrap.com/getting-started/#support-ie10-width
+
+		(function () {
+		  'use strict';
+
+		  if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
+		    var msViewportStyle = document.createElement('style')
+		    msViewportStyle.appendChild(
+		      document.createTextNode(
+		        '@-ms-viewport{width:auto!important}'
+		      )
+		    )
+		    document.querySelector('head').appendChild(msViewportStyle)
+		  }
+
+		})();
+	</script>
 </html>
