--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
 
 		<link rel="stylesheet/less" type="text/css" href="/style/main.less?_=TIMESTAMP">
 		<link rel="stylesheet/less" type="text/css" href="/style/print.less?_=TIMESTAMP" media="print">
+		<link rel="stylesheet" type="text/css" href="style/sticky-footer.css">
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -65,6 +66,7 @@
                 	<!-- <a href='privacy-policy.html'>Privacy policy</a> -->
 				</p>
 			</center>
+		</div>
 	</footer>
 	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 	<script>
