--- a/web/index.html
+++ b/web/index.html
@@ -54,20 +54,16 @@
 		<!-- everything else comes via webpack -->
 		<script src="/build/js/bundle.js"></script>
 
-	</body>
 	<footer class="footer">
 		<div class="col-md-12">
 			<center>
 				<p class="text-muted">
 					&copy; 2017 SoGive <a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
 					<br>
-					SoGive Ltd is a not-for-profit social enterprise, registered as a company in England and Wales with company registration number: 09966206
+					<a href='https://sogive.org' target='_blank'>SoGive Ltd</a> is a not-for-profit social enterprise, 
+					registered in England and Wales with company registration number: 09966206. 
 					<br>
-					Registered address: SoGive, 48 Queen Edith's Way, Cambridge, CB1 8PW
-					<br>
-					Business address: SoGive, 127 Rose St S Ln, Edinburgh EH2 4BB
-					<br>
-                	Site design &amp; hosting: <a href='http://winterwell.com'>Winterwell</a>
+                	Site by <a href='http://winterwell.com'>Winterwell</a>
                 	<!-- <a href='privacy-policy.html'>Privacy policy</a> -->
 				</p>
 			</center>
@@ -99,4 +95,6 @@
 
 		})();
 	</script>
+
+	</body>
 </html>
