--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,22 @@
 	<body>
 		<div id="mainDiv"></div>
 
+		<footer class="footer">
+			<div class="col-md-12">
+				<center>
+					<p class="text-muted">
+						&copy; 2017 SoGive <a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
+						<br>
+						<a href='https://sogive.org' target='_blank'>SoGive Ltd</a> is a not-for-profit social enterprise, 
+						registered in England and Wales with company registration number: 09966206. 
+						<br>
+						Site by <a href='http://winterwell.com'>Winterwell</a>
+						<!-- <a href='privacy-policy.html'>Privacy policy</a> -->
+					</p>
+				</center>
+			</div>
+		</footer>
+		
 		<!-- Scripts -->
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -54,21 +70,16 @@
 		<!-- everything else comes via webpack -->
 		<script src="/build/js/bundle.js"></script>
 
-	<footer class="footer">
-		<div class="col-md-12">
-			<center>
-				<p class="text-muted">
-					&copy; 2017 SoGive <a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
-					<br>
-					<a href='https://sogive.org' target='_blank'>SoGive Ltd</a> is a not-for-profit social enterprise, 
-					registered in England and Wales with company registration number: 09966206. 
-					<br>
-                	Site by <a href='http://winterwell.com'>Winterwell</a>
-                	<!-- <a href='privacy-policy.html'>Privacy policy</a> -->
-				</p>
-			</center>
-		</div>
-	</footer>
+		<script type="text/javascript">
+window._urq = window._urq || [];
+_urq.push(['initSite', 'da84f361-8f8f-4ac7-99eb-81ff60ed7b8a']);
+(function() {
+var ur = document.createElement('script'); ur.type = 'text/javascript'; ur.async = true;
+ur.src = ('https:' == document.location.protocol ? 'https://cdn.userreport.com/userreport.js' : 'http://cdn.userreport.com/userreport.js');
+var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ur, s);
+})();
+</script>
+
 	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 	<script>
 		/*!
