changed the calls for the less files to be css files in the index.html file

--- a/web/index.html
+++ b/web/index.html
@@ -11,8 +11,8 @@
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 		<!--<link href="/lib/bootstrap.min.css" rel="stylesheet" />-->
 
-		<link rel="stylesheet/less" type="text/css" href="/style/main.less?_=TIMESTAMP">
-		<link rel="stylesheet/less" type="text/css" href="/style/print.less?_=TIMESTAMP" media="print">
+		<link rel="stylesheet" type="text/css" href="/style/main.css">
+		<link rel="stylesheet" type="text/css" href="/style/print.css" media="print">
 		<link rel="stylesheet" type="text/css" href="style/sticky-footer.css">
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
