--- a/web/index.html
+++ b/web/index.html
@@ -46,7 +46,7 @@
 		<!-- Scripts -->
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script>
+		<!-- script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script -->
 		<script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
 		<script>
 			window.fbAsyncInit = function() {
