--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,7 @@
 		<footer class="footer">
 			<div class="col-md-12">
 				<center>
+					<img alt="SoGive logo" class="sogive-logo-footer" src="img/logo.png" />
 					<p class="text-muted">
 						&copy; 2017 SoGive <a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
 						<br>
