committing my changes for the day

--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
 		<link rel="shortcut icon" href="/favicon.png" />
 
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="/style/font-awesome.css" rel="stylesheet" />
 		<!--<link href="/lib/bootstrap.min.css" rel="stylesheet" />-->
 
 		<link rel="stylesheet" type="text/css" href="/style/main.css">
