I believe that I am done optimising the site for mobile

--- a/web/index.html
+++ b/web/index.html
@@ -28,11 +28,10 @@
 	<body>
 		<div id="mainDiv"></div>
 
-		<footer class="footer">
-			<div class="col-md-12">
+			<div class="hidden-xs hidden-sm col-md-12 sogive-footer">
 				<center>
-					<img alt="SoGive logo" class="sogive-logo-footer" src="img/logo.png" />
-					<p class="text-muted">
+					<img alt="SoGive logo" class="sogive-logo-footer" src="img/logo-white-dropshaddow-sm.png" />
+					<p class="sogive-footer-text">
 						&copy; 2017 SoGive <a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
 						<br>
 						<a href='https://sogive.org' target='_blank'>SoGive Ltd</a> is a not-for-profit social enterprise, 
@@ -43,7 +42,21 @@
 					</p>
 				</center>
 			</div>
-		</footer>
+			<div class="visible-xs visible-sm col-md-12 sogive-footer-mobile">
+				<center>
+					<img alt="SoGive logo" class="sogive-logo-footer" src="img/logo-white-dropshaddow-sm.png" />
+					<p class="sogive-footer-text">
+						&copy; 2017 SoGive <a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
+						<br>
+						<a href='https://sogive.org' target='_blank'>SoGive Ltd</a> is a not-for-profit social enterprise, 
+						registered in England and Wales with company registration number: 09966206. 
+						<br>
+						Site by <a href='http://winterwell.com'>Winterwell</a>
+						<!-- <a href='privacy-policy.html'>Privacy policy</a> -->
+					</p>
+				</center>
+			</div>
+
 
 		<!-- Scripts -->
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
