--- a/web/index.html
+++ b/web/index.html
@@ -13,8 +13,7 @@
 		<!--<link href="/lib/bootstrap.min.css" rel="stylesheet" />-->
 
 		<link rel="stylesheet" type="text/css" href="/style/main.css">
-		<link rel="stylesheet" type="text/css" href="/style/print.css" media="print">
-		<link rel="stylesheet" type="text/css" href="style/sticky-footer.css">
+		<link rel="stylesheet" type="text/css" href="/style/print.css" media="print">		
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -28,35 +27,22 @@
 	<body>
 		<div id="mainDiv"></div>
 
-			<div class="hidden-xs hidden-sm col-md-12 sogive-footer">
+		<footer class="footer">
+			<div class="col-md-12">
 				<center>
 					<img alt="SoGive logo" class="sogive-logo-footer" src="img/logo-white-dropshaddow-sm.png" />
-					<p class="sogive-footer-text">
-						&copy; 2017 SoGive <a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
+					<p class="text-muted">
+						© 2017 SoGive <a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
 						<br>
-						<a href='https://sogive.org' target='_blank'>SoGive Ltd</a> is a not-for-profit social enterprise, 
+						<a href="https://sogive.org" target="_blank">SoGive Ltd</a> is a not-for-profit social enterprise, 
 						registered in England and Wales with company registration number: 09966206. 
 						<br>
-						Site by <a href='http://winterwell.com'>Winterwell</a>
+						Site by <a href="http://winterwell.com">Winterwell</a>
 						<!-- <a href='privacy-policy.html'>Privacy policy</a> -->
 					</p>
 				</center>
 			</div>
-			<div class="visible-xs visible-sm col-md-12 sogive-footer-mobile">
-				<center>
-					<img alt="SoGive logo" class="sogive-logo-footer" src="img/logo-white-dropshaddow-sm.png" />
-					<p class="sogive-footer-text">
-						&copy; 2017 SoGive <a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
-						<br>
-						<a href='https://sogive.org' target='_blank'>SoGive Ltd</a> is a not-for-profit social enterprise, 
-						registered in England and Wales with company registration number: 09966206. 
-						<br>
-						Site by <a href='http://winterwell.com'>Winterwell</a>
-						<!-- <a href='privacy-policy.html'>Privacy policy</a> -->
-					</p>
-				</center>
-			</div>
-
+		</footer>
 
 		<!-- Scripts -->
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
