Big messy charity page redesign WIP

--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
 
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 		<link href="/style/font-awesome.css" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 		<!--<link href="/lib/bootstrap.min.css" rel="stylesheet" />-->
 
 		<link rel="stylesheet" type="text/css" href="/style/main.css">
