--- a/web/index.html
+++ b/web/index.html
@@ -72,6 +72,10 @@
 		<!-- everything else comes via webpack -->
 		<script src="/build/js/bundle.js"></script>
 
+<script async src='//as.good-loop.com/pxl.js'></script>
+<img src='//lg.good-loop.com/pxl' 
+	style='position:absolute;bottom:0px;left:0px;width:1;height:1;'/>
+
 		<script type="text/javascript">
 window._urq = window._urq || [];
 _urq.push(['initSite', 'da84f361-8f8f-4ac7-99eb-81ff60ed7b8a']);
