--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@
 			ga('create', 'UA-15749759-8', 'auto');
 			ga('send', 'pageview');
 		</script>
+		<script src="https://js.stripe.com/v3/"></script>
 	</head>
 	<body>
 		<div id="mainDiv"></div>
