--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
 		<title>SoGive</title>
 		<link rel="shortcut icon" href="/favicon.png" />
 
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 		<link href="/style/font-awesome.css" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 		<!--<link href="/lib/bootstrap.min.css" rel="stylesheet" />-->
@@ -47,8 +47,8 @@
 		</footer>
 
 		<!-- Scripts -->
-		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="//code.jquery.com/jquery-3.1.0.min.js"></script>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<!-- script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script -->
 		<script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
 		<script>
