--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
 		<link rel="shortcut icon" href="/favicon.png" />
 
 		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-		<link href="/style/font-awesome.css" rel="stylesheet" />
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 		<!--<link href="/lib/bootstrap.min.css" rel="stylesheet" />-->
 
