--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,7 @@
 			ga('send', 'pageview');
 		</script>
 		<script src="https://js.stripe.com/v3/"></script>
+		<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
 	</head>
 	<body>
 		<div id="mainDiv"></div>
