--- a/web/index.html
+++ b/web/index.html
@@ -71,9 +71,20 @@
 				fjs.parentNode.insertBefore(js, fjs);
 			}(document, 'script', 'facebook-jssdk'));
 		</script>
-
+		
 		<!-- everything else comes via webpack -->
-		<script src="/build/js/bundle.js"></script>
+		<script>
+			// never cache in dev
+			var cachebuster = '';
+			if (window.location.host.indexOf('local') !== -1 || window.location.host.indexOf('test') !== -1) {
+				cachebuster = Math.round(Math.random()*100000);
+			}
+			let script = document.createElement('script');
+			script.type = 'text/javascript';
+			script.src = "/build/js/bundle.js?cachebuster="+cachebuster;
+			var head = document.getElementsByTagName("head")[0];
+			(head || document.body).appendChild(script);
+		</script>
 
 <script async src='//as.good-loop.com/pxl.js'></script>
 <img src='//lg.good-loop.com/pxl' 
