--- a/web/index.html
+++ b/web/index.html
@@ -73,18 +73,7 @@
 		</script>
 		
 		<!-- everything else comes via webpack -->
-		<script>
-			// never cache in dev
-			var cachebuster = '';
-			if (window.location.host.indexOf('local') !== -1 || window.location.host.indexOf('test') !== -1) {
-				cachebuster = Math.round(Math.random()*100000);
-			}
-			let script = document.createElement('script');
-			script.type = 'text/javascript';
-			script.src = "/build/js/bundle.js?cachebuster="+cachebuster;
-			var head = document.getElementsByTagName("head")[0];
-			(head || document.body).appendChild(script);
-		</script>
+		<script src='/build/js/bundle.js'></script>		
 
 <script async src='//as.good-loop.com/pxl.js'></script>
 <img src='//lg.good-loop.com/pxl' 
