undoing weird file delete

--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,18 @@
 
 		<footer class="footer">
 			<div class="col-md-12">
+				<center>
+					<img alt="SoGive logo" class="sogive-logo-footer" src="img/logo-white-dropshaddow-sm.png" />
+					<p class="text-muted">
+						<a href='#about'>About this app</a> 
+						© 2017 SoGive <a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
+						<br>
+						<a href="https://sogive.org" target="_blank">SoGive Ltd</a> is a not-for-profit social enterprise, 
+						registered in England and Wales with company registration number: 09966206. 
+						Software by <a href="https://winterwell.com">Winterwell</a>.
+						<!-- <a href='privacy-policy.html'>Privacy policy</a> -->
+					</p>
+				</center>
 			</div>
 		</footer>
 
