--- a/web/index.html
+++ b/web/index.html
@@ -5,27 +5,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 
-		<title>SoGive</title>
+		<title>CalStat: Calendar Statistics</title>
 		<link rel="shortcut icon" href="/favicon.png" />
 
-		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet" />
+		<link rel="stylesheet" 
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous" />
+		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet" crossorigin="anonymous" />
 
 		<!--<link href="/lib/bootstrap.min.css" rel="stylesheet" />-->
 
 		<link rel="stylesheet" type="text/css" href="/style/main.css">
 		<link rel="stylesheet" type="text/css" href="/style/print.css" media="print">
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-			ga('create', 'UA-15749759-8', 'auto');
-			ga('send', 'pageview');
-		</script>
-		<script src="https://js.stripe.com/v3/"></script>
 		<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
 	</head>
 	<body>
@@ -50,28 +41,6 @@
 
 		<!-- Scripts -->
 		<script src="//code.jquery.com/jquery-3.1.0.min.js"></script>
-		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<!-- script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script -->
-		<script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
-		<script>
-			window.fbAsyncInit = function() {
-			    FB.init({
-			      appId      : '1847521215521290',
-			      xfbml      : true,
-			      version    : 'v2.8'
-			    });
-		    //FB.AppEvents.logPageView();
-			};
-
-			(function(d, s, id){
-	    		var js, fjs = d.getElementsByTagName(s)[0];
-				if (d.getElementById(id)) {return;}
-				js = d.createElement(s); js.id = id;
-				js.src = "//connect.facebook.net/en_US/sdk.js";
-				fjs.parentNode.insertBefore(js, fjs);
-			}(document, 'script', 'facebook-jssdk'));
-		</script>
-		
 		<!-- everything else comes via webpack -->
 		<script src='/build/js/bundle.js'></script>		
 
