--- a/web/index.html
+++ b/web/index.html
@@ -37,11 +37,11 @@
 					<img alt="SoGive logo" class="sogive-logo-footer" src="img/logo-white-dropshaddow-sm.png" />
 					<p class="text-muted">
 						<a href='#about'>About this app</a> 
-						© 2017 SoGive <a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
+						©2017-2019 SoGive&trade;<a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
 						<br>
 						<a href="https://sogive.org" target="_blank">SoGive Ltd</a> is a not-for-profit social enterprise, 
 						registered in England and Wales with company registration number: 09966206. 
-						Software by <a href="https://winterwell.com">Winterwell</a>.
+						Software by <a href="https://good-loop.com">Good-Loop</a> &amp; <a href='https://winterwell.com'>Winterwell</a>.
 						<!-- <a href='privacy-policy.html'>Privacy policy</a> -->
 					</p>
 				</center>
