--- a/web/index.html
+++ b/web/index.html
@@ -16,17 +16,6 @@
 
 		<link rel="stylesheet" type="text/css" href="/style/main.css">
 		<link rel="stylesheet" type="text/css" href="/style/print.css" media="print">
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-			ga('create', 'UA-15749759-8', 'auto');
-			ga('send', 'pageview');
-		</script>
-		<script src="https://js.stripe.com/v3/"></script>
-		<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
 	</head>
 	<body>
 		<div id="mainDiv"></div>
@@ -52,6 +41,8 @@
 		<script src="//code.jquery.com/jquery-3.1.0.min.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<!-- script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script -->
+		<script src="https://js.stripe.com/v3/"></script>
+		<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
 		<script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
 		<script>
 			window.fbAsyncInit = function() {
@@ -71,13 +62,16 @@
 				fjs.parentNode.insertBefore(js, fjs);
 			}(document, 'script', 'facebook-jssdk'));
 		</script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-T2KLQFZ');</script>
+<!-- End Google Tag Manager -->
 		
 		<!-- everything else comes via webpack -->
 		<script src='/build/js/bundle.js'></script>		
-
-<script async src='//as.good-loop.com/pxl.js'></script>
-<img src='//lg.good-loop.com/pxl' 
-	style='position:absolute;bottom:0px;left:0px;width:1;height:1;'/>
 
 	</body>
 </html>
