--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,8 @@
 		<link rel="shortcut icon" href="/favicon.png" />
 
 		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+		<!--<link href="//local.web/bootstrap.min.css" rel="stylesheet" />-->
+
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet" />
 
@@ -40,7 +42,8 @@
 		<!-- Scripts -->
 		<script src="//code.jquery.com/jquery-3.1.0.min.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<!-- script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script -->
+		<!--<script src="//local.web/jquery-3.1.0.min.js"></script>-->
+
 		<script src="https://js.stripe.com/v3/"></script>
 		<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
 		<script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
