extra info restored

--- a/web/index.html
+++ b/web/index.html
@@ -73,8 +73,23 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-T2KLQFZ');</script>
 <!-- End Google Tag Manager -->
 		
-		<!-- everything else comes via webpack -->
-		<script src='/build/js/bundle.js'></script>		
+		<!-- everything comes via webpack -->
+		<script>
+			// Insert bundle[-debug].js - but allow dynamic test/production build switch.
+			// Default to debug build on test and local servers.
+			var isDebug = window.location.hostname.match(/^local/) || window.location.hostname.match(/^test/);
+			
+			// Has the user specified debug/production build with a URL param?
+			var debugParam = window.location.search.match(/debug=(\w+)/i);
+			if (debugParam && debugParam[1]) {
+				// Require an exact match to change from default
+				if (debugParam[1] === 'false') isDebug = false;
+				else if (debugParam[1] === 'true') isDebug = true;
+			}
+			
+			var filename = isDebug ? 'bundle-debug.js' : 'bundle.js';
+			document.write('<script src="/build/js/' + filename + '"/><\/script>');
+		</script>	
 
 	</body>
 </html>
