--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
 		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 		<!--<link href="//local.web/bootstrap.min.css" rel="stylesheet" />-->
 
-		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+		<!-- link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" -->
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet" />
 
 		<!--<link href="/lib/bootstrap.min.css" rel="stylesheet" />-->
@@ -41,7 +41,7 @@
 
 		<!-- Scripts -->
 		<script src="//code.jquery.com/jquery-3.1.0.min.js"></script>
-		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://kit.fontawesome.com/e5413daa58.js" crossorigin="anonymous" async></script>
 		<!--<script src="//local.web/jquery-3.1.0.min.js"></script>-->
 
 		<script src="https://js.stripe.com/v3/"></script>
