committing dropdown navbar menu fix

--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,6 @@
 		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 		<!--<link href="//local.web/bootstrap.min.css" rel="stylesheet" />-->
 
-		<!-- link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" -->
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet" />
 
 		<!--<link href="/lib/bootstrap.min.css" rel="stylesheet" />-->
@@ -41,6 +40,10 @@
 
 		<!-- Scripts -->
 		<script src="//code.jquery.com/jquery-3.1.0.min.js"></script>
+		<!--<script src="//local.web/jquery-3.1.0.min.js"></script>-->
+		<!-- BS - needed for the navbar dropdown ??lets make that react -->
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" 
+			integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 		<script src="https://kit.fontawesome.com/e5413daa58.js" crossorigin="anonymous" async></script>
 		<!--<script src="//local.web/jquery-3.1.0.min.js"></script>-->
 
