--- a/web/index.html
+++ b/web/index.html
@@ -8,9 +8,8 @@
 		<title>SoGive</title>
 		<link rel="shortcut icon" href="/favicon.png" />
 
-		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-		<!--<link href="//local.web/bootstrap.min.css" rel="stylesheet" />-->
-
+		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet" />
 
 		<!--<link href="/lib/bootstrap.min.css" rel="stylesheet" />-->
