--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
 
 		<!--<link href="/lib/bootstrap.min.css" rel="stylesheet" />-->
 
-		<link rel="stylesheet" type="text/css" href="/style/main.css">
+		<link rel="stylesheet" type="text/css" href="/build/style/main.css">
 		<link rel="stylesheet" type="text/css" href="/style/print.css" media="print">
 	</head>
 	<body>
