--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
 		<!--<link href="/lib/bootstrap.min.css" rel="stylesheet" />-->
 
 		<link rel="stylesheet" type="text/css" href="/build/style/main.css">
-		<link rel="stylesheet" type="text/css" href="/style/print.css" media="print">
+		<link rel="stylesheet" type="text/css" href="/build/style/print.css" media="print">
 	</head>
 	<body>
 		<div id="mainDiv"></div>
