Temporarily force test server to use live-mode Stripe keys

--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,10 @@
 		<link rel="stylesheet" type="text/css" href="/build/style/print.css" media="print">
 	</head>
 	<body>
+		<div style="width: 100%; background-color: red; color: white; font-size: 30px; font-weight: bold; text-align: center;">
+			CAUTION: TEST SITE CURRENTLY USING LIVE MODE STRIPE KEYS!
+			<div style="font-size: 50%">This is on purpose. You will need a real payment card to test the payment system.</div>
+		</div>
 		<div id="mainDiv"></div>
 
 		<footer class="footer">
