update footer to match new designs

--- a/web/index.html
+++ b/web/index.html
@@ -21,18 +21,22 @@
 
 		<footer class="footer">
 			<div class="col-md-12">
-				<center>
-					<img alt="SoGive logo" class="sogive-logo-footer" src="img/logo-white-dropshaddow-sm.png" />
-					<p class="text-muted">
-						<a href='#about'>About this app</a> 
-						&#169;2017-2021 SoGive&trade;<a href="mailto:sanjay@sogive.org?Subject=Interest%20in%20SoGive" target="_top">Contact Us</a>
-						<br>
-						<a href="https://sogive.org" target="_blank">SoGive Ltd</a> is a not-for-profit social enterprise, 
-						registered in England and Wales with company registration number: 09966206. 
-						Software by <a href="https://good-loop.com">Good-Loop</a> &amp; <a href='https://winterwell.com'>Winterwell</a>.
-						<!-- <a href='privacy-policy.html'>Privacy policy</a> -->
+				<div class="footer-toplinks">
+					<a href="https://sogive.org/privacy-policy.html" target="_blank">Privacy Policy</a>
+					<a href="https://sogive.org/terms.html" target="_blank">Terms and Conditions</a>
+				</div>
+				<div class='footer-grid'>
+					<p>
+					&#169; SoGive&trade;.<br/>
+					Website designed by: Brian Tan<br/>
+					Website developed and hosted by: <a href="https://good-loop.com">Good-Loop</a> & <a href='https://winterwell.com'>Winterwell</a>
 					</p>
-				</center>
+					<p>
+					Company registration number: 09966206<br/>
+					Registered address: SoGive, 48 Queen Edith's Way, Cambridge, CB1 8PW<br/>
+					Business address: SoGive, 127 Rose St S Ln, Edinburgh EH2 4BB
+					</p>
+				</div>
 			</div>
 		</footer>
 
