--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
 					<p>
 					&#169; SoGive&trade;.<br/>
 					Website designed by: Brian Tan<br/>
-					Website developed and hosted by: <a href="https://good-loop.com">Good-Loop</a> & <a href='https://winterwell.com'>Winterwell</a>
+					Website developed and hosted by: <a href="https://good-loop.com">Good-Loop</a> with help from Anita and Aishah.
 					</p>
 					<p>
 					Company registration number: 09966206<br/>
