--- a/web/index.html
+++ b/web/index.html
@@ -22,8 +22,8 @@
 		<footer class="footer">
 			<div class="col-md-12">
 				<div class="footer-toplinks">
-					<a href="https://sogive.org/privacy-policy.html" target="_blank">Privacy Policy</a>
-					<a href="https://sogive.org/terms.html" target="_blank">Terms and Conditions</a>
+					<a href="#privacypolicy">Privacy Policy</a>
+					<a href="#terms" target="_blank">Terms of Service</a>
 				</div>
 				<div class='footer-grid'>
 					<p>
