--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
 			<div class="col-md-12">
 				<div class="footer-toplinks">
 					<a href="#privacypolicy">Privacy Policy</a>
-					<a href="#terms" target="_blank">Terms of Service</a>
+					<a href="#terms">Terms of Service</a>
 				</div>
 				<div class='footer-grid'>
 					<p>
