--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@
 				<div class="footer-toplinks">
 					<a href="https://sogive.org/privacy-policy.html">Privacy Policy</a>
 					<a href="#terms">Terms of Service</a>
+					<a href="#careers">Careers</a>
 				</div>
 				<div class='footer-grid'>
 					<p>
