Increased font sizes & fixed privacy policy link

--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
 		<footer class="footer">
 			<div class="col-md-12">
 				<div class="footer-toplinks">
-					<a href="https://sogive.org/privacy-policy.html">Privacy Policy</a>
+					<a href="#privacypolicy">Privacy Policy</a>
 					<a href="#terms">Terms of Service</a>
 					<a href="#careers">Careers</a>
 				</div>
